Model evaluation added with mlflow

--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -85,8 +85,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pyYAML in c:\\users\\raj\\anaconda3\\envs\\kidney\\lib\\site-packages (6.0.2)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+      "Requirement already satisfied: pyYAML in c:\\users\\raj\\anaconda3\\envs\\kidney\\lib\\site-packages (6.0.2)Note: you may need to restart the kernel to use updated packages.\n",
+      "\n"
      ]
     }
    ],
@@ -134,9 +134,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\raj\\anaconda3\\envs\\kidney\\lib\\site-packages\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
+      "c:\\Users\\raj\\anaconda3\\envs\\kidney\\lib\\site-packages\\numpy\\.libs\\libopenblas.FB5AE2TYXYH2IJRDKGDGQ3XBKLKTF43H.gfortran-win_amd64.dll\n",
+      "c:\\Users\\raj\\anaconda3\\envs\\kidney\\lib\\site-packages\\numpy\\.libs\\libopenblas64__v0.3.21-gcc_10_3_0.dll\n",
+      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n"
+     ]
+    }
+   ],
    "source": [
     "from src.cnnClassifier.constants import *\n",
     "from src.cnnClassifier.utils.common import read_yaml, create_directories\n",
@@ -145,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,18 +247,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-02-14 15:11:49,981: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2025-02-14 15:11:50,016: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2025-02-14 15:11:50,023: INFO: common: created directory at: artifacts]\n",
-      "[2025-02-14 15:11:50,029: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2025-02-14 15:11:50,035: INFO: 986331348: Downloading data from https://drive.google.com/file/d/1vlhZ5c7abUKF8xXERIw6m9Te8fW7ohw3/view?usp=sharing into file artifacts/data_ingestion/data.zip]\n"
+      "[2025-02-15 21:11:47,649: INFO: common: yaml file: config\\config.yaml loaded successfully]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2025-02-15 21:11:47,661: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-02-15 21:11:47,665: INFO: common: created directory at: artifacts]\n",
+      "[2025-02-15 21:11:47,670: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2025-02-15 21:11:47,674: INFO: 986331348: Downloading data from https://drive.google.com/file/d/1vlhZ5c7abUKF8xXERIw6m9Te8fW7ohw3/view?usp=sharing into file artifacts/data_ingestion/data.zip]\n"
      ]
     },
     {
@@ -256,16 +273,16 @@
      "text": [
       "Downloading...\n",
       "From (original): https://drive.google.com/uc?/export=download&id=1vlhZ5c7abUKF8xXERIw6m9Te8fW7ohw3\n",
-      "From (redirected): https://drive.google.com/uc?%2Fexport=download&id=1vlhZ5c7abUKF8xXERIw6m9Te8fW7ohw3&confirm=t&uuid=39e5384a-4e64-4b5d-ada9-bf1e201d78c2\n",
+      "From (redirected): https://drive.google.com/uc?%2Fexport=download&id=1vlhZ5c7abUKF8xXERIw6m9Te8fW7ohw3&confirm=t&uuid=cfc83d68-2238-452b-b70a-fa11d8821311\n",
       "To: c:\\Users\\raj\\Desktop\\Kidney-Disease-Classification\\artifacts\\data_ingestion\\data.zip\n",
-      "100%|██████████| 57.7M/57.7M [00:15<00:00, 3.76MB/s]"
+      "100%|██████████| 57.7M/57.7M [00:15<00:00, 3.70MB/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-02-14 15:12:11,187: INFO: 986331348: Downloaded data from https://drive.google.com/file/d/1vlhZ5c7abUKF8xXERIw6m9Te8fW7ohw3/view?usp=sharing into file artifacts/data_ingestion/data.zip]\n"
+      "[2025-02-15 21:12:08,870: INFO: 986331348: Downloaded data from https://drive.google.com/file/d/1vlhZ5c7abUKF8xXERIw6m9Te8fW7ohw3/view?usp=sharing into file artifacts/data_ingestion/data.zip]\n"
      ]
     },
     {
