--- a/research/02_prepare_base_model.ipynb
+++ b/research/02_prepare_base_model.ipynb
@@ -44,7 +44,18 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\raj\\anaconda3\\envs\\kidney\\lib\\site-packages\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
+      "c:\\Users\\raj\\anaconda3\\envs\\kidney\\lib\\site-packages\\numpy\\.libs\\libopenblas.FB5AE2TYXYH2IJRDKGDGQ3XBKLKTF43H.gfortran-win_amd64.dll\n",
+      "c:\\Users\\raj\\anaconda3\\envs\\kidney\\lib\\site-packages\\numpy\\.libs\\libopenblas64__v0.3.21-gcc_10_3_0.dll\n",
+      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n"
+     ]
+    }
+   ],
    "source": [
     "from src.cnnClassifier.constants import *\n",
     "from src.cnnClassifier.utils.common import read_yaml, create_directories"
@@ -90,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -114,13 +125,12 @@
       "Requirement already satisfied: setuptools in c:\\users\\raj\\anaconda3\\envs\\kidney\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow==2.12.0) (75.1.0)\n",
       "Requirement already satisfied: six>=1.12.0 in c:\\users\\raj\\anaconda3\\envs\\kidney\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow==2.12.0) (1.16.0)\n",
       "Requirement already satisfied: termcolor>=1.1.0 in c:\\users\\raj\\anaconda3\\envs\\kidney\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow==2.12.0) (2.4.0)\n",
-      "Requirement already satisfied: typing-extensions>=3.6.6 in c:\\users\\raj\\anaconda3\\envs\\kidney\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow==2.12.0) (4.5.0)\n",
+      "Requirement already satisfied: typing-extensions>=3.6.6 in c:\\users\\raj\\anaconda3\\envs\\kidney\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow==2.12.0) (4.12.2)\n",
       "Requirement already satisfied: wrapt<1.15,>=1.11.0 in c:\\users\\raj\\anaconda3\\envs\\kidney\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow==2.12.0) (1.14.1)\n",
       "Requirement already satisfied: grpcio<2.0,>=1.24.3 in c:\\users\\raj\\anaconda3\\envs\\kidney\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow==2.12.0) (1.70.0)\n",
       "Requirement already satisfied: tensorboard<2.13,>=2.12 in c:\\users\\raj\\anaconda3\\envs\\kidney\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow==2.12.0) (2.12.3)\n",
       "Requirement already satisfied: tensorflow-estimator<2.13,>=2.12.0 in c:\\users\\raj\\anaconda3\\envs\\kidney\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow==2.12.0) (2.12.0)\n",
-      "Collecting keras<2.13,>=2.12.0 (from tensorflow-intel==2.12.0->tensorflow==2.12.0)\n",
-      "  Using cached keras-2.12.0-py2.py3-none-any.whl.metadata (1.4 kB)\n",
+      "Requirement already satisfied: keras<2.13,>=2.12.0 in c:\\users\\raj\\anaconda3\\envs\\kidney\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow==2.12.0) (2.12.0)\n",
       "Requirement already satisfied: tensorflow-io-gcs-filesystem>=0.23.1 in c:\\users\\raj\\anaconda3\\envs\\kidney\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow==2.12.0) (0.31.0)\n",
       "Requirement already satisfied: wheel<1.0,>=0.23.0 in c:\\users\\raj\\anaconda3\\envs\\kidney\\lib\\site-packages (from astunparse>=1.6.0->tensorflow-intel==2.12.0->tensorflow==2.12.0) (0.44.0)\n",
       "Requirement already satisfied: ml-dtypes>=0.1.0 in c:\\users\\raj\\anaconda3\\envs\\kidney\\lib\\site-packages (from jax>=0.3.15->tensorflow-intel==2.12.0->tensorflow==2.12.0) (0.2.0)\n",
@@ -144,13 +154,6 @@
       "Requirement already satisfied: MarkupSafe>=2.1.1 in c:\\users\\raj\\anaconda3\\envs\\kidney\\lib\\site-packages (from werkzeug>=1.0.1->tensorboard<2.13,>=2.12->tensorflow-intel==2.12.0->tensorflow==2.12.0) (2.1.5)\n",
       "Requirement already satisfied: pyasn1<0.7.0,>=0.4.6 in c:\\users\\raj\\anaconda3\\envs\\kidney\\lib\\site-packages (from pyasn1-modules>=0.2.1->google-auth<3,>=1.6.3->tensorboard<2.13,>=2.12->tensorflow-intel==2.12.0->tensorflow==2.12.0) (0.6.1)\n",
       "Requirement already satisfied: oauthlib>=3.0.0 in c:\\users\\raj\\anaconda3\\envs\\kidney\\lib\\site-packages (from requests-oauthlib>=0.7.0->google-auth-oauthlib<1.1,>=0.5->tensorboard<2.13,>=2.12->tensorflow-intel==2.12.0->tensorflow==2.12.0) (3.2.2)\n",
-      "Using cached keras-2.12.0-py2.py3-none-any.whl (1.7 MB)\n",
-      "Installing collected packages: keras\n",
-      "  Attempting uninstall: keras\n",
-      "    Found existing installation: keras 2.15.0\n",
-      "    Uninstalling keras-2.15.0:\n",
-      "      Successfully uninstalled keras-2.15.0\n",
-      "Successfully installed keras-2.12.0\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -161,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,20 +246,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-02-15 09:40:06,678: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2025-02-15 09:40:06,711: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2025-02-15 09:40:06,717: INFO: common: created directory at: artifacts]\n",
-      "[2025-02-15 09:40:06,721: INFO: common: created directory at: artifacts/prepare_base_model]\n",
-      "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/vgg16/vgg16_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
-      "58889256/58889256 [==============================] - 19s 0us/step\n",
-      "[2025-02-15 09:40:27,848: WARNING: saving_utils: Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.]\n",
+      "[2025-02-15 21:12:50,100: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-02-15 21:12:50,108: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-02-15 21:12:50,113: INFO: common: created directory at: artifacts]\n",
+      "[2025-02-15 21:12:50,118: INFO: common: created directory at: artifacts/prepare_base_model]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2025-02-15 21:12:51,654: WARNING: saving_utils: Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.]\n",
       "Model: \"model\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
