--- a/research/03_model_training.ipynb
+++ b/research/03_model_training.ipynb
@@ -270,19 +270,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-02-15 11:04:50,300: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2025-02-15 11:04:50,312: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2025-02-15 11:04:50,318: INFO: common: created directory at: artifacts]\n",
-      "[2025-02-15 11:04:50,322: INFO: common: created directory at: artifacts\\training]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[2025-02-15 21:15:43,114: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-02-15 21:15:43,124: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-02-15 21:15:43,128: INFO: common: created directory at: artifacts]\n",
+      "[2025-02-15 21:15:43,134: INFO: common: created directory at: artifacts\\training]\n",
       "Found 93 images belonging to 2 classes.\n",
       "Found 372 images belonging to 2 classes.\n",
-      "23/23 [==============================] - 45s 2s/step - loss: 13.0907 - accuracy: 0.5478 - val_loss: 11.5282 - val_accuracy: 0.4375\n"
+      "23/23 [==============================] - 49s 2s/step - loss: 27.0747 - accuracy: 0.5281 - val_loss: 12.6167 - val_accuracy: 0.6000\n"
      ]
     }
    ],
