--- a/research/04_model_evaluation_with_mlflow.ipynb
+++ b/research/04_model_evaluation_with_mlflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\raj\\\\Desktop'"
+       "'c:\\\\Users\\\\raj\\\\Desktop\\\\Kidney-Disease-Classification\\\\research'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        "'c:\\\\Users\\\\raj\\\\Desktop\\\\Kidney-Disease-Classification'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,16 +71,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\raj\\anaconda3\\envs\\kidney\\lib\\site-packages\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
+      "c:\\Users\\raj\\anaconda3\\envs\\kidney\\lib\\site-packages\\numpy\\.libs\\libopenblas.FB5AE2TYXYH2IJRDKGDGQ3XBKLKTF43H.gfortran-win_amd64.dll\n",
+      "c:\\Users\\raj\\anaconda3\\envs\\kidney\\lib\\site-packages\\numpy\\.libs\\libopenblas64__v0.3.21-gcc_10_3_0.dll\n",
+      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,47 +328,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-02-15 21:21:03,869: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2025-02-15 21:21:03,879: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2025-02-15 21:21:03,882: INFO: common: created directory at: artifacts]\n",
+      "[2025-02-17 09:35:12,074: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-02-17 09:35:12,086: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-02-17 09:35:12,089: INFO: common: created directory at: artifacts]\n",
       "Found 139 images belonging to 2 classes.\n",
-      "9/9 [==============================] - 15s 1s/step - loss: 11.9855 - accuracy: 0.5180\n",
-      "[2025-02-15 21:21:20,365: INFO: common: json file saved at: scores.json]\n"
+      "9/9 [==============================] - 18s 2s/step - loss: 0.4076 - accuracy: 0.8345\n",
+      "[2025-02-17 09:35:31,512: INFO: common: json file saved at: scores.json]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025/02/15 21:21:22 WARNING mlflow.tensorflow: You are saving a TensorFlow Core model or Keras model without a signature. Inference with mlflow.pyfunc.spark_udf() will not work unless the model's pyfunc representation accepts pandas DataFrames as inference inputs.\n"
+      "2025/02/17 09:35:33 WARNING mlflow.tensorflow: You are saving a TensorFlow Core model or Keras model without a signature. Inference with mlflow.pyfunc.spark_udf() will not work unless the model's pyfunc representation accepts pandas DataFrames as inference inputs.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-02-15 21:21:26,866: WARNING: save: Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op while saving (showing 5 of 14). These functions will not be directly callable after loading.]\n",
-      "INFO:tensorflow:Assets written to: C:\\Users\\raj\\AppData\\Local\\Temp\\tmpo0ucuw3l\\model\\data\\model\\assets\n",
-      "[2025-02-15 21:21:28,849: INFO: builder_impl: Assets written to: C:\\Users\\raj\\AppData\\Local\\Temp\\tmpo0ucuw3l\\model\\data\\model\\assets]\n"
+      "[2025-02-17 09:35:38,189: WARNING: save: Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op while saving (showing 5 of 14). These functions will not be directly callable after loading.]\n",
+      "INFO:tensorflow:Assets written to: C:\\Users\\raj\\AppData\\Local\\Temp\\tmp5lp4bxlq\\model\\data\\model\\assets\n",
+      "[2025-02-17 09:35:40,296: INFO: builder_impl: Assets written to: C:\\Users\\raj\\AppData\\Local\\Temp\\tmp5lp4bxlq\\model\\data\\model\\assets]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025/02/15 21:21:54 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n",
+      "2025/02/17 09:36:06 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n",
       "Registered model 'VGG16Model' already exists. Creating a new version of this model...\n",
-      "2025/02/15 21:22:38 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: VGG16Model, version 3\n",
-      "Created version '3' of model 'VGG16Model'.\n",
-      "2025/02/15 21:22:38 INFO mlflow.tracking._tracking_service.client: 🏃 View run bustling-kite-328 at: https://dagshub.com/alokranjan609/Kidney-Disease-Classification.mlflow/#/experiments/0/runs/b8f94cdc50cd47e18f4aec9c7252d0c7.\n",
-      "2025/02/15 21:22:38 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: https://dagshub.com/alokranjan609/Kidney-Disease-Classification.mlflow/#/experiments/0.\n"
+      "2025/02/17 09:36:49 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: VGG16Model, version 9\n",
+      "Created version '9' of model 'VGG16Model'.\n",
+      "2025/02/17 09:36:49 INFO mlflow.tracking._tracking_service.client: 🏃 View run salty-colt-283 at: https://dagshub.com/alokranjan609/Kidney-Disease-Classification.mlflow/#/experiments/0/runs/537d3c2cc2fc4688889bfd01d9cdc529.\n",
+      "2025/02/17 09:36:49 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: https://dagshub.com/alokranjan609/Kidney-Disease-Classification.mlflow/#/experiments/0.\n"
      ]
     }
    ],
